<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ai.ftech.ekyc.common.widget.toolbar.ToolbarView
        android:id="@+id/tbvConfirmPictureHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fbase_dimen_88"
        android:background="@drawable/fekyc_bg_header"
        app:layout_constraintTop_toTopOf="parent"
        app:tbv_right_text_content="@string/fekyc_home_right_title"
        app:tbv_right_text_text_size="@dimen/fbase_text_size_4"
        app:tbv_right_type="NONE"
        app:tbv_title_text="@string/fekyc_confirm_picture_title"
        app:tbv_title_text_size="@dimen/fbase_text_size_6" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fbase_dimen_16"
        app:layout_constraintBottom_toTopOf="@id/btnConfirmPictureContinues"
        app:layout_constraintTop_toBottomOf="@id/tbvConfirmPictureHeader" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmPictureContinues"
        style="@style/FBaseStyleText18Regular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fbase_dimen_56"
        android:layout_marginHorizontal="@dimen/fbase_dimen_16"
        android:layout_marginBottom="@dimen/fbase_dimen_30"
        android:background="@drawable/fekyc_shape_rect_bg_blue_corner_8"
        android:gravity="center"
        android:text="@string/fekyc_confirm_picture_continues"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
